--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@svgr/webpack": "^6.1.2",
     "next": "12.0.7",
+    "peerjs": "^1.3.2",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
