--- a/package.json
+++ b/package.json
@@ -1,28 +1,15 @@
 {
 	"name": "enfys",
 	"license": "GPL-3.0",
+	"version": "0.0.0",
+	"private": true,
 	"scripts": {
-		"dev": "next dev",
-		"build": "next build",
-		"start": "next start",
-		"lint": "next lint"
+		"dev": "lerna run dev --stream --parallel"
 	},
-	"dependencies": {
-		"@svgr/webpack": "^6.1.2",
-		"next": "12.0.7",
-		"peerjs": "^1.3.2",
-		"react": "17.0.2",
-		"react-dom": "17.0.2"
-	},
+	"workspaces": [
+		"packages/*"
+	],
 	"devDependencies": {
-		"@tailwindcss/typography": "^0.5.0",
-		"@types/node": "17.0.6",
-		"@types/react": "17.0.38",
-		"autoprefixer": "^10.4.1",
-		"eslint": "8.6.0",
-		"eslint-config-next": "12.0.7",
-		"postcss": "^8.4.5",
-		"tailwindcss": "^3.0.8",
-		"typescript": "4.5.4"
+		"lerna": "^4.0.0"
 	}
 }
