--- a/packages/frontend/.env.development
+++ b/packages/frontend/.env.development
@@ -1,1 +1,2 @@
-NEXT_PUBLIC_API_URL="http://127.0.0.1:9453"
+NEXT_PUBLIC_API_URL="http://localhost:9453"
+NEXT_PUBLIC_SOCKET_URL="ws://localhost:9453"
