--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -12,15 +12,16 @@
 		"@prisma/client": "^3.7.0",
 		"@svgr/webpack": "^6.1.2",
 		"next": "12.0.7",
-		"peerjs": "^1.3.2",
 		"react": "17.0.2",
 		"react-dom": "17.0.2",
+		"simple-peer": "^9.11.0",
 		"swr": "^1.1.2"
 	},
 	"devDependencies": {
 		"@tailwindcss/typography": "^0.5.0",
 		"@types/node": "17.0.6",
 		"@types/react": "17.0.38",
+		"@types/simple-peer": "^9.11.4",
 		"autoprefixer": "^10.4.1",
 		"eslint": "8.6.0",
 		"eslint-config-next": "12.0.7",
