--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@enfys/voice",
+	"name": "@enfys/backend",
 	"main": "index.js",
 	"license": "SEE LICENSE IN LICENSE",
 	"version": "0.0.0",
