--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -9,6 +9,7 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@headlessui/react": "^1.4.3",
 		"@svgr/webpack": "^6.1.2",
 		"next": "12.0.7",
 		"react": "17.0.2",
