--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -11,6 +11,7 @@
 	"dependencies": {
 		"@headlessui/react": "^1.4.3",
 		"@svgr/webpack": "^6.1.2",
+		"hark": "^1.2.3",
 		"next": "12.0.7",
 		"react": "17.0.2",
 		"react-dom": "17.0.2",
@@ -19,6 +20,7 @@
 	},
 	"devDependencies": {
 		"@tailwindcss/typography": "^0.5.0",
+		"@types/hark": "^1.2.2",
 		"@types/node": "17.0.6",
 		"@types/react": "17.0.38",
 		"@types/simple-peer": "^9.11.4",
